# dbx2s3

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
examples/: example_usage.py
openspec/changes/add-dropbox-delete-sync/: design.md  proposal.md  tasks.md
openspec/changes/add-dropbox-delete-sync/specs/dropbox-delete-sync/: spec.md
openspec/changes/add-dropbox-retry-handling/: design.md  proposal.md  tasks.md
openspec/changes/add-dropbox-retry-handling/specs/dropbox-retry-handling/: spec.md
openspec/changes/add-parallel-backup-workers/: design.md  proposal.md  tasks.md
openspec/changes/add-parallel-backup-workers/specs/parallel-backup-workers/: spec.md
openspec/changes/improve-backup-failure-recovery/: design.md  proposal.md  tasks.md
openspec/changes/improve-backup-failure-recovery/specs/backup-failure-recovery/: spec.md
src/dbx2s3/: __init__.py  backup.py  cli.py  config.py  dropbox_client.py  s3_storage.py  state_manager.py  storage.py
tests/: __init__.py  test_backup.py  test_basic.py  test_dropbox_client.py  test_s3_storage.py
