[project]
name = "dbx2s3"
version = "0.1.0"
description = "Backup Dropbox to S3-compatible storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.28.0",
    "boto3>=1.40.50",
    "dropbox>=12.0.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
dbx2s3 = "dbx2s3.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbx2s3"]
